# tinydb_cc_comet

./: .gitignore  README.md  pyproject.toml  tinydb-proposal.md
.comet/: config.yaml  current-change.json
docs/: MVP_LIMITATIONS.md  功能测试报告.md  操作手册.md
examples/: demo.py  repl_smoke.sh
src/tinydb/: __init__.py  _executor_drop.py  _executor_snapshot.py  _executor_sort.py  _index_pager.py  _schema.py  btree.py  catalog.py  database.py  errors.py  executor.py  index_manager.py  pager.py  parser.py  recovery.py  repl.py  row_codec.py  slotted_page.py  tokenizer.py  transaction.py  type_system.py  wal.py
tests/e2e/: conftest.py  test_golden_sql.py
tests/fixtures/: legacy_mvp_schema.json  mixed_invalid_schema.json  new_constraints_schema.json
tests/integration/: test_acid.py  test_acid_compat.py  test_aggregation_pipeline.py  test_autocommit.py  test_btree_in_transaction.py  test_catalog.py  test_catalog_constraints.py  test_catalog_overflow.py  test_constraints_perf.py  test_constraints_repl.py  test_crash_recovery.py  test_database_api.py  test_ddl_in_transaction.py  test_drop_reclaims_pages.py  test_engine_v1.py  test_executor.py  test_full_sql_lifecycle.py  test_overflow_chain.py  test_pager.py  test_pager_v2_header.py  test_pager_v3_header.py  test_parser_executor_roundtrip.py  test_recovery_fuzz.py  test_repl_process.py  test_select_uses_index.py  test_storage_page_chain.py  test_types_in_where.py  test_types_repl.py  test_types_roundtrip.py
tests/property/: test_parser_constraints.py  test_parser_robustness.py  test_storage_constraints.py  (+1 more)
(+323 files in other folders)
