[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydb"
version = "0.1.0"
description = "Minimal embedded relational database (MVP)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tinydb-repl = "tinydb.repl:main"

[project.optional-dependencies]
dev = ["pytest>=7", "hypothesis>=6", "pytest-cov>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=tinydb --cov-report=term-missing --cov-fail-under=85"
markers = [
    "spec_id(id): per-scenario spec traceability marker",
    "unit: pure unit tests (no I/O)",
    "integration: cross-module integration tests",
    "property: hypothesis-driven property tests",
    "e2e: end-to-end happy-path tests",
]
